# pycon2025

paleofuturistic_python_project/: .cruft.json  LICENSE  README.md  mkdocs.yml  pyproject.toml
paleofuturistic_python_project/docs/: index.md
paleofuturistic_python_project/src/paleofuturistic_python_project/: __init__.py  paleofuturistic_python_project.py
paleofuturistic_python_project/tests/: test_paleofuturistic_python_project.py
